# john2143.com

./: .babelrc  .dockerignore  .eslintrc.js  .gitignore  .jshintrc  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.worker  README.md  asdf.html  const.js  eslint.config.js  exampleConst.js  flake.nix  global.js  juush  juush.js  juushFiles  main.js  package-lock.json  package.json  rustfs-lifecycle-plan.md  server  server.js  sprintf.js  startup.bat  test.js  travis.const.js  tsconfig.json  tsconfig.test.json
.cargo/: config.toml
.github/workflows/: build.yaml
juush/: API.js  download.js  index.js  newuser.js  upload.js  util.js
pages/: 404.html  addpage.html  auth-error.html  bouldercult.html  forsta.html  login.html  merge.html  robots.txt  rumbleismysponsor.html  sexualtension.html  skippybippy.html  teamarin.html  upload.html  user.html  user_old.html  userjs.js
rots/: rots.html  rots.js
scripts/: dev.sh  patch-hono-node-server.cjs
src/: api.rs  const.js  const.ts  database.rs  environment.d.ts  exampleConst.js  global.js  global.ts  index.js  index.ts  logger.ts  main.js  main.rs  server.js  server.ts  test.js  travis.const.js  types.d.ts
src/auth/: config.ts  middleware.ts  providers.ts  routes.ts  session.ts
src/juush/: API.js  API.ts  compat.ts  download.js  download.ts  index.js  index.ts  jobs.ts  merge.ts  migrate.ts  newuser.js  newuser.ts  prune.ts  upload.js  upload.ts  util.js  util.ts
src/tests/: dbtest.js  dbtest.ts  initdbtest.js  test.js  (+3 more)
test_mongo/: counters.json  index.json  keys.json
tests/: dbtest.js  initdbtest.js  test.js
(+12 files in other folders)
