[package]
name = "site2143"
version = "0.1.0"
authors = ["John Schmidt <john@john2143.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
# General
anyhow = { version = "1.0.86", features = [] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"

# cli
clap = { version = "4.5.4", features = ["derive", "env"] }

# API Endpoint
axum = { version = "0.7.5", features = ["tracing"], optional = true }
serde = { version = "1.0.203", features = ["derive"], optional = true }
serde_json = { version = "1.0.117", optional = true }

# DB
mongodb = "2.8.2"
tower-http = "0.5.2"

# Other
#regex = "1.10.4"
#k8s-openapi = { version = "0.22.0", features = ["latest"] }
#kube = { version = "0.91.0", features = ["runtime", "derive"] }
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"], default-features = false }
futures = "0.3.30"
